Agrego carrito de compras terminado

--- a/Inventario/css/style.css
+++ b/Inventario/css/style.css
@@ -8,12 +8,12 @@
     
 }
 
-.placeholder_1{
+/* .placeholder_1{
     background-image: url("https://images.wallpaperscraft.com/image/single/chip_circuit_processor_140251_1600x900.jpg");
     padding: 30px;
     margin-bottom: 8px;
     background-position: 50% 50%;
-}
+} */
 
 .placeholder_2{
     background-image: url("https://images.wallpaperscraft.com/image/single/hologram_scheme_scifi_139294_1600x900.jpg");
@@ -22,12 +22,12 @@
     background-position: 50% 50%;
 }
 
-.placeholder_3{
+/* .placeholder_3{
     background-image: url("https://images.wallpaperscraft.com/image/single/computer_motherboard_cooler_201602_1600x900.jpg");
     padding: 30px;
     margin-bottom: 8px;
     background-position: 50% 50%;
-}
+} */
 
 .placeholder_4{
     background-image: url("https://images.wallpaperscraft.com/image/single/keyboard_backlight_purple_212155_1600x900.jpg");
